# SciberQuestToolKit-Batch

./: CMakeLists.txt  README.md  examples.sh
configs/: ftle-batch-template.xml  mtopo-template.xml  poincare-batch-template.xml  smooth-batch-template.xml  vortex-batch-template.xml
configs/edison/: dipole33d.xml
configs/hopper/: mhd-poincare.xm  mime-ftle.xml  mime-poincare.xml  mime-smoothing.xml  takuma-ftle.xml  takuma-poincare.xml  takuma-smoothing.xml
configs/longhorn/: 25kn-eq-mtopo.xml
configs/templates/: mtopo-template.xml  poincare-batch-template.xml  smooth-batch-template.xml  vortex-batch-template.xml
example-output/: .README
execs/: BatchUtil.cxx  BatchUtil.h  CMakeLists.txt  DebugUtil.cxx  FTLEBatch.cpp  MagnetosphereTopoBatch.cpp  MagnetosphereTopoBatchPVD.cpp  PoincareBatch.cpp  SlicerBatch.cpp  SmoothBatch.cpp  TopologyBatch.cpp  VortexDetectBatch.cpp
scripts/: CMakeLists.txt  sqtk-batch-longhorn.qsub  sqtk-batch-submit-all.sh
scripts/edison/: start_sqtkbatch.sh
scripts/longhorn/: sqtk-batch-longhorn.qsub
